--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* ===== RESET START ===== */
-*{
+* {
 	box-sizing: border-box;
 }
-body{
+body {
 	margin: 0;
 	background-color: #fff;
 	color: #777;
@@ -11,21 +11,21 @@ body{
 	line-height: 1;
 	font-family: 'Open Sans', sans-serif;
 }
-h1, h2, h3, h4, h5, h6, {
-	margin: 0;
+h1, h2, h3, h4, h5, h6 {
+	margin: 0px;
 	font-weight: normal;
 }
 p {
-	margin: 0;
+	margin: 0px;
 }
-a{
+a {
 	color: inherit;
 	text-decoration: none;
 }
-a:hover, a:active{
+a:hover, a:active {
 	text-decoration: none;
 }
-ul, ol{
+ul, ol {
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -55,20 +55,22 @@ blockquote	{
 .bg-black {
 	background-color: #111;
 }
-.bg-grey {
+.bg-gray {
 	background-color: #f8f8f8;
 }
 /* ===== DEFAULT CLASSES END ===== */
 /* ===== DEFAULT COMPONRNTS START ===== */
+/* SECTIONS START */
 .default-section {
 	padding: 135px 0;
 }
 .small-section {
 	padding: 70px 0;
 }
+/* SECTIONS END */
 /* CONTAINER START */
 .container {
-	max-width: 1200;
+	max-width: 1200px;
 	padding: 0 15px;
 	margin: auto;
 }
@@ -97,7 +99,7 @@ blockquote	{
 	color: #fff;
 }
 .btn.btn-black:hover {
-	background-color: #111;
+	background-color: #000;
 }
 .btn.btn-xs {
 	padding: 7px 15px;
@@ -131,10 +133,70 @@ blockquote	{
 	font-weight: 300;
 }
 /* TEXT, TITLE END */
-/* SECTIONS START */
-/* SECTIONS END */
 /* HEADER START */
+.header {
+	background-color: transparent;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	padding: 25px 30px;
+}
+.container-fluid .logo {
+	float: left;
+}
+.container-fluid .header-nav {
+	float: right;
+	line-height: 23px;
+}
+.container-fluid .header-nav li {
+	float: left;
+	font-size: 11px;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: .3em;
+}
+.container-fluid .header-nav li + li {
+	margin-left: 35px;
+}
+.container-fluid .header-nav li a:hover {
+	border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
+}
 /* HEADER END */
+/* INNER START */
+.inner {
+	background-image: url("../img/inner-bg.jpg");
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-position: center bottom;
+	background-size: cover;
+	text-align: center;
+}
+.inner::before {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+	margin-left: -4px;
+}
+.inner-content {
+	display: inline-block;
+	vertical-align: middle;
+	color: #fefefe;
+}
+.inner-content h1 {
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	font-size: 30px;
+	letter-spacing: 1.7em;
+	text-indent: 1.7em;
+	font-weight: 400;
+	margin-bottom: 105px;
+}
+.inner-content span {
+	font-size: 19px;
+}
+/* INNER END */
 /* FOOTER START */
 /* FOOTER END */
 /* FORM START */
