--- a/css/style.css
+++ b/css/style.css
@@ -140,26 +140,26 @@ blockquote	{
 	position: fixed;
 	top: 0;
 	width: 100%;
-	padding: 25px 30px;
+	padding: 25px 0px;
 }
-.container-fluid .logo {
+.header .logo {
 	float: left;
 }
-.container-fluid .header-nav {
+.header .header-nav {
 	float: right;
 	line-height: 23px;
 }
-.container-fluid .header-nav li {
+.header .header-nav li {
 	float: left;
 	font-size: 11px;
-	color: #fff;
+	color:rgba(255, 255, 255, .75);
 	text-transform: uppercase;
 	letter-spacing: .3em;
 }
-.container-fluid .header-nav li + li {
+.header .header-nav li + li {
 	margin-left: 35px;
 }
-.container-fluid .header-nav li a:hover {
+.header .header-nav li a:hover {
 	border-bottom: 1px solid #fff;
     border-top: 1px solid #fff;
 }
@@ -194,9 +194,11 @@ blockquote	{
 	text-indent: 1.7em;
 	font-weight: 400;
 	margin-bottom: 105px;
+	color: rgba(254, 254, 254, .9);
 }
 .inner-content span {
 	font-size: 19px;
+	color: rgba(254, 254, 254, .68);
 }
 /* INNER END */
 /* FOOTER START */
@@ -220,6 +222,125 @@ blockquote span,
 	letter-spacing: .2em;
 }
 /* BLOCKQUOTE END */
-/* ===== DEFAULT COMPONRNTS START ===== */
+/* ===== DEFAULT COMPONRNTS END ===== */
+
+/* ========== ABOUT STUDIO START ========== */
+.team-wrapper {
+	padding-top: 100px;
+}
+.team-item .team-item-img {
+	position: relative;
+}
+.team-item .team-item-img img {
+	filter: grayscale(100%);
+}
+.team-item .team-item-skills {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(19, 19, 19);
+	transition: opacity .2s linear;
+}
+.team-item .team-item-img:hover .team-item-skills {
+	opacity: 1;
+}
+.team-item .team-item-skills-content {
+	padding: 40px;
+}
+.team-item .skills-heading {
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	font-size: 18px;
+	letter-spacing: .3em;
+	font-weight: 400;
+	color: #fff;
+	display: block;
+	margin-bottom: 26px;
+}
+.team-item .skills-text {
+	font-size: 13px;
+	line-height: 21px;
+	color: #fff;
+	display: block;
+}
+.team-item .progress-bars-section {
+	margin-top: 41px;
+}
+.team-item .progress-bar-heading {
+	display: block;
+	font-size: 11px;
+	font-weight: 400;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	color: rgba(255, 255, 255, .9);
+	margin-top: 20px;
+}
+.team-item .skills-progress-bar {
+	margin-top: 7px;
+	position: relative;
+	display: block;
+	height: 12px;
+	background-color: rgba(54, 54, 54, .15);
+}
+.team-item .progress-bar-value {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	background-color: rgba(205, 205, 205, .75);
+}
+.team-item .progress-bar-value.branding {
+	width: 215px;
+}
+.team-item .progress-bar-value.design {
+	width: 246px;
+}
+.team-item .progress-bar-value.development {
+	width: 235px;
+}
+.team-item .progress-bar-value.photography {
+	width: 225px;
+}
+.team-item .team-item-info {
+	text-align: center;
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+	font-weight: 400;
+	letter-spacing: .4em;
+	margin-top: 30px;
+}
+.team-item .team-item-name {
+	display: block;
+	margin-bottom: 16px;
+}
+.team-item .team-item-role {
+	display: block;
+	font-size: 12px;
+}
+/* ========== ABOUT STUDIO END ========== */
+/* ========== Why Choose Us? START ========== */
+.why-choose-us-item {
+
+}
+.why-choose-us-item .why-choose-us-item-img {
+	padding-bottom: 35px;
+}
+.why-choose-us-item .why-choose-us-item-img span {
+	font-size: 48px;
+	letter-spacing: 0.5em;
+	color: #111;
+}
+.why-choose-us-item .why-choose-us-item-heading {
+	display: block;
+	font-family: 'Dosis', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 0.4em;
+	color: #111;
+	margin-bottom: 35px;
+}
+/* ========== Why Choose Us? END ========== */
 
 
