--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,12 @@ blockquote	{
 	margin-right: auto;
 	margin-left: auto;
 }
+.pull-left {
+	float: left;
+}
+.pull-right {
+	float: right;
+}
 /* ===== DEFAULT CLASSES END ===== */
 /* ===== DEFAULT COMPONRNTS START ===== */
 /* SECTIONS START */
@@ -162,6 +168,7 @@ blockquote	{
 }
 textarea.form-control {
 	min-height: 82px;
+	padding-top: 9px;
 }
 .form-control[disabled],
 .form-control.disabled {
@@ -240,10 +247,11 @@ textarea.form-control {
 /* HEADER START */
 .header {
 	background-color: transparent;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	width: 100%;
 	padding: 25px 0px;
+	z-index: 99;
 }
 .header .logo {
 	float: left;
@@ -267,6 +275,7 @@ textarea.form-control {
     border-top: 1px solid #fff;
 }
 /* HEADER END */
+
 /* INNER START */
 .inner {
 	background-image: url("../img/inner-bg.jpg");
@@ -323,6 +332,22 @@ blockquote span,
 	letter-spacing: .2em;
 }
 /* BLOCKQUOTE END */
+
+/* ARROW-UP START */
+.arrow-up {
+	font-size: 30px;
+	color: #c6c6c6;
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
+	cursor: pointer;
+	transition: font-size 0.2s linear;
+}
+.arrow-up:hover {
+	font-size: 35px;
+}
+/* ARROW-UP END */
+
 /* ===== DEFAULT COMPONRNTS END ===== */
 
 /* ========== ABOUT STUDIO START ========== */
@@ -346,7 +371,7 @@ blockquote span,
 	width: 100%;
 	height: 100%;
 	background-color: rgb(19, 19, 19);
-	transition: opacity .2s linear;
+	transition: opacity .3s linear;
 }
 .team-item .team-item-img:hover .team-item-skills {
 	opacity: 1;
@@ -365,8 +390,10 @@ blockquote span,
 	margin-bottom: 26px;
 }
 .team-item .skills-text {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
 	font-size: 13px;
-	line-height: 21px;
+	line-height: 1.6;
 	color: #fff;
 	display: block;
 }
@@ -387,25 +414,52 @@ blockquote span,
 	position: relative;
 	display: block;
 	height: 12px;
-	background-color: rgba(54, 54, 54, .15);
+	background-color: rgba(255, 255, 255, .15);
+	overflow: hidden;
 }
 .team-item .progress-bar-value {
 	position: absolute;
 	top: 0;
 	height: 100%;
-	background-color: rgba(205, 205, 205, .75);
+	background-color: rgba(255, 255, 255, .75);
+	width: 0%;
+	transition: all 1s linear;
 }
-.team-item .progress-bar-value.branding {
-	width: 215px;
+.team-item.thomas-rhythm .team-item-img:hover .progress-bar-value.branding {
+	width: 75%;
 }
-.team-item .progress-bar-value.design {
-	width: 246px;
+.team-item.thomas-rhythm .team-item-img:hover .progress-bar-value.design {
+	width: 85%;
 }
-.team-item .progress-bar-value.development {
-	width: 235px;
+.team-item.thomas-rhythm .team-item-img:hover .progress-bar-value.development {
+	width: 80%;
 }
-.team-item .progress-bar-value.photography {
-	width: 225px;
+.team-item.thomas-rhythm .team-item-img:hover .progress-bar-value.photography {
+	width: 76%;
+}
+.team-item.marta-laning .team-item-img:hover .progress-bar-value.branding {
+	width: 50%;
+}
+.team-item.marta-laning .team-item-img:hover .progress-bar-value.design {
+	width: 95%;
+}
+.team-item.marta-laning .team-item-img:hover .progress-bar-value.development {
+	width: 65%;
+}
+.team-item.marta-laning .team-item-img:hover .progress-bar-value.photography {
+	width: 80%;
+}
+.team-item.steve-anders .team-item-img:hover .progress-bar-value.branding {
+	width: 95%;
+}
+.team-item.steve-anders .team-item-img:hover .progress-bar-value.design {
+	width: 55%;
+}
+.team-item.steve-anders .team-item-img:hover .progress-bar-value.development {
+	width: 75%;
+}
+.team-item.steve-anders .team-item-img:hover .progress-bar-value.photography {
+	width: 90%;
 }
 .team-item .team-item-info {
 	text-align: center;
@@ -731,6 +785,9 @@ blockquote span,
 /* ========== SUBSCRIBE END ========== */
 
 /* ========== CONTACTS START =========== */
+.contacts-items-wrapper {
+	margin-bottom: 80px;
+}
 .contact-item .contact-item-content {
 	display: inline-block;
 	vertical-align: middle;
@@ -745,16 +802,89 @@ blockquote span,
 	font-size: 12px;
 	letter-spacing: 0.3em;
 	text-transform: uppercase;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 }
 .contact-item .contact-item-text {
 	color: #444444;
 }
+.contact-form {
+	margin: 0 -5px;
+	overflow: hidden;
+}
+.contact-form .form-col {
+	float: left;
+	width: 50%;
+	padding: 0 5px;
+}
+.contact-form .form-control + .form-control {
+	margin-top: 10px;
+}
+.contact-form .form-col textarea {
+	margin-bottom: 20px;
+}
+.contact-form .form-info {
+	line-height: 41px;
+	margin-left: 5px;
+}
+.contact-form .btn {
+	margin-right: 5px;
+}
 /* ========== CONTACTS END ========== */
 
+/* ========== MAP START ========== */
+#map {
+	height: 410px;
+}
+.map-container {
+	position: relative;
+}
+.map-container .on-map-block {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(17, 17, 17, .95);
+	z-index: 1;
+	transition-property: z-index, background-color;
+	transition-duration: 0.5s;
+	transition-timing-function: ease-in;
+}
+.map-container:hover .on-map-block {
+	z-index: -1;
+	background-color: rgba(17, 17, 17, 0);
+}
+.map-container .on-map-block::before {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+	margin-left: -4px;
+}
+.map-container .on-map-content {
+	display: inline-block;
+	vertical-align: middle;
+}
+.map-container .romb-icon {
+	margin-bottom: 27px;
+}
+.map-container .on-map-text span {
+	font-family: 'Dosis', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	letter-spacing: 0.3em;
+	text-transform: uppercase;
+	color: rgba(255, 255, 255, .75);
+}
+.map-container .on-map-text i {
+	font-size: 16px;
+	color: rgba(255, 255, 255, .75);
+}
+/* ========== MAP END ========== */
+
 /* ========== FOOTER START ========== */
-.footer-content {
-	padding-top: 140;
+.footer {
+	padding-top: 140px;
 	padding-bottom: 60px;
 }
 .footer .footer-content-img {
@@ -786,5 +916,6 @@ blockquote span,
 .footer .copyright-text {
 	font-family: 'Open Sans', sans-serif;
 	color: #999999;
+	font-weight: 400;
 }
 /* ========== FOOTER END ========== */
